[package]
name = "raylib_template"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
imgui = "0.12.0"
imgui-sys = "0.12.0"
raylib = { package = "sola-raylib", version = "6.2" }

[target.wasm32-unknown-emscripten.dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn" }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.web-dev]
inherits = "web-release"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
