[package]
name = "raylib_template"
description = "A template project for working with raylib in Rust."
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
raylib = { package = "sola-raylib", version = "6.2" }
platform_compat = { path = "./engine/platform_compat" }

[target.wasm32-unknown-emscripten.dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn" }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
opt-level = 3
debug-assertions = false

[profile.release.package."*"]
debug-assertions = false

[profile.web-release]
inherits = "release"
opt-level = "s"

[profile.web-dev]
inherits = "web-release"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
